# monitor

./: .gitignore  CMakeLists.txt  README.md  config.h  configure  diff_command.sh  main.cpp  monitor.c  monitor.h  sentry_report.py
conf/: conf.cfg
diff/: CMakeLists.txt  cmpbuf.h  config.cache  config.h  config.status  diff.c  dir.c  stamp-h  system.h  util.c
git/: CMakeLists.txt  common.h  git2.c
libinotifytools/: Makefile  Makefile.in
libinotifytools/src/: CMakeLists.txt  Makefile  Makefile.in  example.c  example.cpp  inotifytools.c
libinotifytools/src/inotifytools/: Makefile  Makefile.in  inotifytools.h
test/: CMakeLists.txt  inotify_test.cpp
